remove client for removed endponits - combine-pages and run-analysis
